--- a/src/main/resources/fxml/TransferCell.fxml
+++ b/src/main/resources/fxml/TransferCell.fxml
@@ -6,42 +6,52 @@
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
-<GridPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8"
-  fx:id="gridPaneTransfer">
-  <children>
-    <Button GridPane.columnIndex="2" GridPane.rowIndex="1" mnemonicParsing="false" text="Accept"
-      fx:id="buttonAccept"/>
-    <Button GridPane.columnIndex="2" GridPane.rowIndex="2" mnemonicParsing="false" text="Decline"
-      fx:id="buttonDecline"/>
-    <Button GridPane.columnIndex="2" GridPane.rowIndex="1" disable="true" mnemonicParsing="false"
-      text="Cancel Download" visible="false" fx:id="buttonCancelTransfer"/>
-    <Label GridPane.rowIndex="2" text="Filename"/>
-    <Label GridPane.columnIndex="1" GridPane.rowIndex="1" text="size" fx:id="size">
-      <padding>
-        <Insets left="10.0" right="10.0"/>
-      </padding>
-    </Label>
-    <Label GridPane.columnIndex="1" GridPane.rowIndex="2" prefHeight="17.0" prefWidth="125.0"
-      text="filename" fx:id="filename">
-      <padding>
-        <Insets left="10.0" right="10.0"/>
-      </padding>
-    </Label>
-    <Label GridPane.rowIndex="1" text="Size"/>
-    <ProgressBar GridPane.columnIndex="2" GridPane.rowIndex="2" prefWidth="200.0" progress="0.0"
-      visible="false" fx:id="transferProgressBar"/>
-    <Label GridPane.rowIndex="3" text="calculating..." fx:id="transferSpeed"/>
-    <Label GridPane.rowIndex="4" text="calculating..." fx:id="secondsToGo"/>
-  </children>
+<GridPane fx:id="gridPaneTransfer" xmlns="http://javafx.com/javafx/8"
+  xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
     <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" percentWidth="20.0"/>
     <ColumnConstraints hgrow="ALWAYS" percentWidth="35.0"/>
-    <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" percentWidth="35.0"/>
+    <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" percentWidth="45.0"/>
   </columnConstraints>
   <rowConstraints>
     <RowConstraints/>
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+    <RowConstraints/>
+    <RowConstraints/>
   </rowConstraints>
+  <HBox GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2">
+    <ProgressBar fx:id="transferProgressBar" progress="0.0" visible="false">
+      <HBox.margin>
+        <Insets right="10.0"/>
+      </HBox.margin>
+    </ProgressBar>
+    <Label fx:id="transferSpeed" text="calculating..." visible="false">
+      <HBox.margin>
+        <Insets right="10.0"/>
+      </HBox.margin>
+    </Label>
+    <Label fx:id="secondsToGo" text="calculating..." visible="false"/>
+  </HBox>
+  <Button fx:id="buttonAccept" mnemonicParsing="false" text="Accept" GridPane.columnIndex="2"
+    GridPane.rowIndex="1"/>
+  <Button fx:id="buttonDecline" mnemonicParsing="false" text="Decline" GridPane.columnIndex="2"
+    GridPane.rowIndex="2"/>
+  <Button fx:id="buttonCancelTransfer" disable="true" mnemonicParsing="false"
+    text="Cancel Download" visible="false" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
+  <Label text="Filename" GridPane.rowIndex="2"/>
+  <Label fx:id="size" text="size" GridPane.columnIndex="1" GridPane.rowIndex="1">
+    <padding>
+      <Insets left="10.0" right="10.0"/>
+    </padding>
+  </Label>
+  <Label fx:id="filename" prefHeight="17.0" prefWidth="125.0" text="filename"
+    GridPane.columnIndex="1" GridPane.rowIndex="2">
+    <padding>
+      <Insets left="10.0" right="10.0"/>
+    </padding>
+  </Label>
+  <Label text="Size" GridPane.rowIndex="1"/>
 </GridPane>
