--- a/src/main/resources/fxml/MainWindowView.fxml
+++ b/src/main/resources/fxml/MainWindowView.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -26,7 +25,7 @@
     <Image url="@../icon.png"/>
   </ImageView>
   <TabPane onDragExited="#onWindowDragExit" onDragOver="#onWindowDragEnter"
-    tabClosingPolicy="UNAVAILABLE">
+    tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
     <Tab text="Transfers">
       <AnchorPane>
         <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
@@ -84,17 +83,9 @@
             </VBox>
           </HBox>
           <HBox>
-
-
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false"
-              onAction="#refreshList" text="Refresh">
+            <Button mnemonicParsing="false" onAction="#addPeerManually" text="Add Peer manually">
               <HBox.margin>
                 <Insets top="10.0"/>
-              </HBox.margin>
-            </Button>
-            <Button mnemonicParsing="false" text="Add Peer manually" onAction="#addPeerManually">
-              <HBox.margin>
-                <Insets left="10.0" top="10.0"/>
               </HBox.margin>
             </Button>
           </HBox>
