--- a/src/main/resources/fxml/MainWindowView.fxml
+++ b/src/main/resources/fxml/MainWindowView.fxml
@@ -66,7 +66,7 @@
                   <Insets bottom="10.0"/>
                 </VBox.margin>
               </Text>
-              <ListView fx:id="listView" onMouseClicked="#onListItemDoubleClick"
+              <ListView fx:id="listView"
                 VBox.vgrow="ALWAYS"/>
               <padding>
                 <Insets right="10.0"/>
