--- a/src/main/resources/fxml/TransferCell.fxml
+++ b/src/main/resources/fxml/TransferCell.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<AnchorPane fx:id="PaneTransfer" xmlns="http://javafx.com/javafx/8.0.171"
+<AnchorPane fx:id="paneTransfer" xmlns="http://javafx.com/javafx/8"
   xmlns:fx="http://javafx.com/fxml/1">
   <HBox alignment="CENTER_LEFT" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
     AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
