--- a/src/main/resources/fxml/ListCell.fxml
+++ b/src/main/resources/fxml/ListCell.fxml
@@ -2,49 +2,55 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<GridPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" minHeight="-Infinity"
-  minWidth="-Infinity"
-  xmlns="http://javafx.com/javafx/8" fx:id="gridPane">
-  <columnConstraints>
-    <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" percentWidth="20.0"/>
-    <ColumnConstraints hgrow="ALWAYS" percentWidth="35.0"/>
-    <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" percentWidth="10.0"/>
-    <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" percentWidth="35.0"/>
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints/>
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-  </rowConstraints>
-  <Label GridPane.columnIndex="1" GridPane.rowIndex="1" text="IP:" fx:id="ip">
-    <padding>
-      <Insets left="10.0" right="10.0"/>
-    </padding>
-  </Label>
-  <Label GridPane.columnIndex="3" GridPane.rowIndex="1" prefHeight="17.0" prefWidth="72.0"
-    text="FN:" fx:id="fn">
-    <padding>
-      <Insets left="10.0" right="10.0"/>
-    </padding>
-  </Label>
-  <Label GridPane.columnIndex="1" GridPane.rowIndex="2" prefHeight="17.0" prefWidth="125.0"
-    text="Fingerprint:"
-    fx:id="finger">
-    <padding>
-      <Insets left="10.0" right="10.0"/>
-    </padding>
-  </Label>
-  <Label GridPane.columnIndex="3" GridPane.rowIndex="2" prefHeight="17.0" prefWidth="91.0"
-    text="DN:" fx:id="dn">
-    <padding>
-      <Insets left="10.0" right="10.0"/>
-    </padding>
-  </Label>
-  <Label GridPane.rowIndex="1" text="IP:"/>
-  <Label GridPane.rowIndex="2" text="Fingerprint:"/>
-  <Label GridPane.columnIndex="2" GridPane.rowIndex="1" text="FN:"/>
-  <Label GridPane.columnIndex="2" GridPane.rowIndex="2" text="DN:"/>
-</GridPane>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
+<HBox fx:id="panePeer" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+  <StackPane>
+    <Circle fx:id="peerIcon" fill="DODGERBLUE" radius="24.0" stroke="TRANSPARENT"
+      strokeType="INSIDE" StackPane.alignment="CENTER">
+      <StackPane.margin>
+        <Insets bottom="5.0" left="5.0" top="5.0"/>
+      </StackPane.margin>
+    </Circle>
+    <Text fx:id="textIcon" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="FN"
+      StackPane.alignment="CENTER">
+      <font>
+        <Font size="28.0"/>
+      </font>
+      <StackPane.margin>
+        <Insets bottom="5.0" left="5.0" top="5.0"/>
+      </StackPane.margin>
+    </Text>
+  </StackPane>
+  <VBox alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS">
+    <Label fx:id="dn" maxWidth="1.7976931348623157E308" text="DN:" VBox.vgrow="ALWAYS">
+      <padding>
+        <Insets left="10.0" right="10.0"/>
+      </padding>
+      <font>
+        <Font name="System Bold" size="15.0"/>
+      </font>
+    </Label>
+    <Label fx:id="finger" maxWidth="1.7976931348623157E308" text="Fingerprint:">
+      <padding>
+        <Insets left="10.0" right="10.0"/>
+      </padding>
+    </Label>
+  </VBox>
+  <VBox alignment="CENTER_RIGHT">
+    <Label fx:id="fn" maxWidth="1.7976931348623157E308" text="FN:">
+      <padding>
+        <Insets left="10.0" right="10.0"/>
+      </padding>
+    </Label>
+    <Label fx:id="ip" maxWidth="1.7976931348623157E308" text="IP:">
+      <padding>
+        <Insets left="10.0" right="10.0"/>
+      </padding>
+    </Label>
+  </VBox>
+</HBox>
