--- a/src/main/resources/fxml/TransferCell.fxml
+++ b/src/main/resources/fxml/TransferCell.fxml
@@ -8,33 +8,33 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<AnchorPane fx:id="paneTransfer" xmlns="http://javafx.com/javafx/8"
+<AnchorPane fx:id="paneTransfer" xmlns="http://javafx.com/javafx/8.0.171"
   xmlns:fx="http://javafx.com/fxml/1">
   <HBox alignment="CENTER_LEFT" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
     AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
     <AnchorPane>
       <HBox.margin>
-        <Insets left="5.0"/>
+        <Insets/>
       </HBox.margin>
       <ImageView fx:id="finishedIcon" layoutY="7.0" visible="false">
         <Image url="@../success.png"/>
       </ImageView>
-      <ImageView fx:id="downloadingIcon" layoutY="7.0">
+      <ImageView fx:id="downloadingIcon" layoutY="4.0">
         <Image url="@../download.png"/>
       </ImageView>
     </AnchorPane>
-    <VBox HBox.hgrow="ALWAYS">
+    <VBox alignment="CENTER" HBox.hgrow="ALWAYS">
       <HBox.margin>
         <Insets left="5.0"/>
       </HBox.margin>
       <Label fx:id="filename" maxWidth="1.7976931348623157E308" text="filename"/>
-      <ProgressBar fx:id="transferProgressBar" maxWidth="1.7976931348623157E308"
-        progress="0.0" visible="false" VBox.vgrow="ALWAYS"/>
+      <ProgressBar fx:id="transferProgressBar" maxHeight="10.0" maxWidth="1.7976931348623157E308"
+        minHeight="10.0" prefHeight="10.0" progress="0.0" visible="false" VBox.vgrow="ALWAYS"/>
       <HBox fx:id="progressHbox" visible="false">
         <Label fx:id="secondsToGo" text="seconds"/>
         <Label text="left -">
           <HBox.margin>
-            <Insets left="10.0" right="10.0"/>
+            <Insets left="5.0" right="5.0"/>
           </HBox.margin>
         </Label>
         <Label fx:id="sizeCurrent" text="size"/>
@@ -46,15 +46,11 @@
         <Label fx:id="sizeTotal" text="size"/>
         <Label fx:id="size1" text="(">
           <padding>
-            <Insets left="10.0" right="5.0"/>
+            <Insets left="5.0"/>
           </padding>
         </Label>
         <Label fx:id="transferSpeed" text="transferSpeed"/>
-        <Label text=")">
-          <padding>
-            <Insets left="5.0" right="10.0"/>
-          </padding>
-        </Label>
+        <Label text=")"/>
       </HBox>
     </VBox>
     <ImageView fx:id="buttonAccept" accessibleRole="BUTTON">
