--- a/src/main/resources/fxml/MainWindowView.fxml
+++ b/src/main/resources/fxml/MainWindowView.fxml
@@ -10,12 +10,11 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 <VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
   fx:controller="ch.hsr.epj.localshare.demo.gui.application.MainWindowController">
@@ -31,34 +30,45 @@
       <AnchorPane>
         <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
           AnchorPane.topAnchor="0.0">
-          <GridPane VBox.vgrow="SOMETIMES">
-            <Label text="Friendly Name:"/>
-            <Label text="IP-Address:" GridPane.rowIndex="1"/>
-            <Label text="Fingerprint:" GridPane.rowIndex="2"/>
-            <Text fx:id="ipAddressText" strokeType="OUTSIDE" strokeWidth="0.0" text="172.96.12.88"
-              wrappingWidth="160.7392578125" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-            <Text fx:id="fingerPrintText" strokeType="OUTSIDE" strokeWidth="0.0" text="1234"
-              wrappingWidth="581.7392578125" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS"
-              GridPane.rowIndex="2" GridPane.vgrow="ALWAYS"/>
-            <Text fx:id="friendlyNameText" strokeType="OUTSIDE" strokeWidth="0.0" text="hansWurst"
-              wrappingWidth="116.7392578125" GridPane.columnIndex="1"/>
-            <columnConstraints>
-              <ColumnConstraints hgrow="SOMETIMES" maxWidth="206.0" minWidth="10.0"
-                prefWidth="127.0"/>
-              <ColumnConstraints hgrow="SOMETIMES"/>
-            </columnConstraints>
-            <padding>
-              <Insets bottom="20.0"/>
-            </padding>
-            <rowConstraints>
-              <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0"
-                vgrow="SOMETIMES"/>
-              <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0"
-                vgrow="SOMETIMES"/>
-              <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0"
-                vgrow="SOMETIMES"/>
-            </rowConstraints>
-          </GridPane>
+          <HBox>
+            <StackPane>
+              <HBox.margin>
+                <Insets bottom="5.0" right="10.0" top="5.0"/>
+              </HBox.margin>
+              <Circle fx:id="ownIcon" fill="DODGERBLUE" radius="30.0" stroke="TRANSPARENT"
+                strokeType="INSIDE" StackPane.alignment="CENTER">
+                <StackPane.margin>
+                  <Insets bottom="5.0" left="5.0" top="5.0"/>
+                </StackPane.margin>
+              </Circle>
+              <Text fx:id="ownText" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0"
+                text="FN" StackPane.alignment="CENTER">
+                <font>
+                  <Font size="28.0"/>
+                </font>
+                <StackPane.margin>
+                  <Insets bottom="5.0" left="5.0" top="5.0"/>
+                </StackPane.margin>
+              </Text>
+            </StackPane>
+            <VBox alignment="CENTER_LEFT" minHeight="-Infinity" minWidth="-Infinity"
+              prefHeight="68.0" prefWidth="120.0">
+              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Friendly Name:"
+                wrappingWidth="116.7392578125"/>
+              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Own IP Address:"
+                wrappingWidth="160.7392578125"/>
+              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Fingerprint:"
+                wrappingWidth="581.7392578125"/>
+            </VBox>
+            <VBox alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308">
+              <Text fx:id="friendlyNameText" strokeType="OUTSIDE" strokeWidth="0.0"
+                text="hansWurst" wrappingWidth="116.7392578125"/>
+              <Text fx:id="ipAddressText" strokeType="OUTSIDE" strokeWidth="0.0"
+                text="172.96.12.88" wrappingWidth="160.7392578125"/>
+              <Text fx:id="fingerPrintText" strokeType="OUTSIDE" strokeWidth="0.0" text="1234"
+                wrappingWidth="581.7392578125"/>
+            </VBox>
+          </HBox>
           <HBox VBox.vgrow="ALWAYS">
             <VBox id="testRefresh" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS">
               <StackPane>
