--- a/src/main/resources/fxml/TransferCell.fxml
+++ b/src/main/resources/fxml/TransferCell.fxml
@@ -8,7 +8,8 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<AnchorPane fx:id="paneTransfer" xmlns="http://javafx.com/javafx/8.0.171"
+<AnchorPane fx:id="paneTransfer" xmlns="http://javafx.com/javafx/8"
+  fx:controller="ch.hsr.epj.localshare.demo.gui.application.DownloadListViewCell"
   xmlns:fx="http://javafx.com/fxml/1">
   <HBox alignment="CENTER_LEFT" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
     AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -44,7 +45,7 @@
           </HBox.margin>
         </Label>
         <Label fx:id="sizeTotal" text="size"/>
-        <Label fx:id="size1" text="(">
+        <Label text="(">
           <padding>
             <Insets left="5.0"/>
           </padding>
@@ -53,13 +54,15 @@
         <Label text=")"/>
       </HBox>
     </VBox>
-    <ImageView fx:id="buttonAccept" accessibleRole="BUTTON">
+    <ImageView fx:id="buttonAccept" accessibleRole="BUTTON" onMouseEntered="#highlightAcceptButton"
+      onMouseExited="#normalizeAcceptButton">
       <HBox.margin>
         <Insets right="10.0"/>
       </HBox.margin>
       <Image url="@../play.png"/>
     </ImageView>
-    <ImageView fx:id="buttonCancelTransfer" accessibleRole="BUTTON">
+    <ImageView fx:id="buttonCancel" accessibleRole="BUTTON" onMouseEntered="#highlightCancelButton"
+      onMouseExited="#normalizeCancelButton">
       <HBox.margin>
         <Insets right="5.0"/>
       </HBox.margin>
