--- a/src/main/resources/fxml/PreferencesView.fxml
+++ b/src/main/resources/fxml/PreferencesView.fxml
@@ -1,38 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8"
+<VBox maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/8.0.171"
+  xmlns:fx="http://javafx.com/fxml/1"
   fx:controller="ch.hsr.epj.localshare.demo.gui.application.PreferencesViewController">
-
-  <GridPane layoutX="23.0" layoutY="27.0" prefHeight="350.0" prefWidth="679.0">
-    <columnConstraints>
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="356.0" minWidth="10.0" prefWidth="167.0"/>
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="459.0" minWidth="10.0" prefWidth="160.0"/>
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="349.0" minWidth="10.0" prefWidth="349.0"/>
-    </columnConstraints>
-    <rowConstraints>
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-    </rowConstraints>
-    <Button GridPane.columnIndex="2" GridPane.rowIndex="3" mnemonicParsing="false"
-      onAction="#handleChangeDownloadButtonAction" text="Change Path"/>
-    <Label GridPane.rowIndex="2" prefHeight="31.0" prefWidth="219.0"
-      text="Current Download Path:"/>
-    <Label prefHeight="31.0" prefWidth="219.0" text="Configuration Path:"/>
-    <Text GridPane.rowIndex="3" strokeType="OUTSIDE" strokeWidth="0.0" text=""
-      wrappingWidth="292.13671875"
-      fx:id="downloadPath"/>
-    <Text GridPane.rowIndex="1" strokeType="OUTSIDE" strokeWidth="0.0" text=""
-      wrappingWidth="292.13671875"
-      fx:id="configPath"/>
-  </GridPane>
-
-</AnchorPane>
+  <padding>
+    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+  </padding>
+  <VBox maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
+    <Label prefHeight="31.0" text="Configuration Path:">
+      <font>
+        <Font size="24.0"/>
+      </font>
+    </Label>
+    <Text fx:id="configPath" strokeType="OUTSIDE" strokeWidth="0.0" text="ConfigPath"
+      wrappingWidth="292.13671875"/>
+    <VBox.margin>
+      <Insets top="50.0"/>
+    </VBox.margin>
+  </VBox>
+  <VBox maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
+    <VBox.margin>
+      <Insets top="50.0"/>
+    </VBox.margin>
+    <Label maxWidth="1.7976931348623157E308" text="Current Download Path:">
+      <font>
+        <Font size="24.0"/>
+      </font>
+    </Label>
+    <HBox maxWidth="1.7976931348623157E308">
+      <Text fx:id="downloadPath" strokeType="OUTSIDE" strokeWidth="0.0" text="DownloadPath"
+        wrappingWidth="292.13671875"/>
+      <Button alignment="CENTER_RIGHT" contentDisplay="RIGHT" mnemonicParsing="false"
+        onAction="#handleChangeDownloadButtonAction" text="Change Path"/>
+    </HBox>
+  </VBox>
+</VBox>
