--- a/src/main/resources/fxml/ChannelView.fxml
+++ b/src/main/resources/fxml/ChannelView.fxml
@@ -8,9 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<AnchorPane prefHeight="400.0" prefWidth="738.0" xmlns="http://javafx.com/javafx/8"
-  xmlns:fx="http://javafx.com/fxml/1"
-  fx:controller="ch.hsr.epj.localshare.demo.gui.application.ChannelViewController">
+<AnchorPane prefHeight="400.0" prefWidth="738.0" xmlns="http://javafx.com/javafx/8">
   <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
     AnchorPane.topAnchor="0.0">
     <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
